<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailLokasiFragment"
    android:padding="5dp"
    >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/back_icon"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/detail_lokasi"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Subtitle -->
    <TextView
        android:layout_marginStart="30dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/keselamatan_pemancing_adalah_hal_terpenting"
        android:textColor="#666666"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <!-- Image in CardView -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="16dp" />

            <!-- Title + Rating -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/nama_tempat"
                    android:maxLength="17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:progressTint="@color/warna_terisi"
                    android:secondaryProgressTint="@color/warna_belum_terisi"
                    />

                <TextView
                    android:id="@+id/rating_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/_4_9"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/coment_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/icon_coment" />

                <TextView
                    android:id="@+id/commentCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/_1" />

            </LinearLayout>

            <!-- Subtitle Detail -->
            <TextView
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/pematang_duku"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/created_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dibagikan_oleh_d"
                android:textSize="12sp" />

            <!-- Descriptive Details -->
            <TextView
                android:id="@+id/rute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/rute"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/jenis_ikan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/jenisikan"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/saran_perlengkapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/saran_perlengkapan"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/umpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/rekomendasi_umpan"
                android:textSize="14sp" />

            <!-- Route Button -->
            <Button
                android:id="@+id/btn_goto_goolemap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#4CAF50"
                android:fontFamily="@font/poppins_medium"
                android:text="Rute Perjalanan" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
