<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/educationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lokasi"
        android:textSize="24sp"
        android:paddingStart="16dp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"/>

    <TextView
        android:id="@+id/educationSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lokasi_temukan"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:fontFamily="@font/poppins_medium"/>

    <!-- Search and icon layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <!-- SearchView and icons layout -->
    </LinearLayout>

    <!-- SwipeRefreshLayout for pull-to-refresh -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_lokasi"
            android:padding="6dp"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dataUnavailable"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="gone"
        android:textColor="#FF0000" />
</LinearLayout>
