<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_actifity"
    tools:context=".ui.auth.register.RegisterActivity">


    <ProgressBar
        android:id="@+id/progresbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/layout_shape"
            android:orientation="vertical"
            android:paddingVertical="31dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/register"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="27dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/layout_shape"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="13dp"
                android:paddingVertical="12dp">

                <ImageView

                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/user_logo" />

                <EditText
                    android:id="@+id/edt_nama"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="27dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/layout_shape"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="13dp"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/email_icon" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/rtlzw80i1f2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="27dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/layout_shape"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="13dp"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/phone_icon" />

                <EditText
                    android:id="@+id/edt_nomor_h"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/nomor_hp"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="27dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/layout_shape"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="13dp"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"

                    android:layout_marginEnd="16dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/gembok" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="12sp" />
            </LinearLayout>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/daftar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins"
                    android:text="@string/belum_punya_akun"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
